PAL-684 updated getters and setters for Lists and Sets